--- a/src/content/blog/manufacturing.mdx
+++ b/src/content/blog/manufacturing.mdx
@@ -29,7 +29,7 @@ Tesla's approach to manufacturing—famous for its speed, visibility, and effici
     <div class="text-lg text-neutral-500/70  flex flex-col ">
     <span class="hover:text-blue-500 transition-colors duration-300">1. Make the requirements less dumb.</span> 
     <span class="hover:text-blue-500 transition-colors duration-300">2. Delete the part or process.</span> 
-    <span class="hover:text-blue-500 transition-colors duration-300">3. Simplify or optimise the design.</span> 
+    <span class="hover:text-blue-500 transition-colors duration-300">3. Simplify or optimize the design.</span> 
     <span class="hover:text-blue-500 transition-colors duration-300">4. Accelerate cycle time.</span> 
     <span class="font-bold text-blue-500 transition-colors duration-300">5. Automate.</span> 
     </div>
@@ -68,9 +68,10 @@ We've established that normally manual methods are actually *more* efficient in 
 Very often, solutions developed in the early stages of development can be scaled sufficiently to support significant production runs. The cost of automation and reduced flexibility it brings must be carefully weighed against the efficiency benefits of automation which will only be felt after significant production runs.
 
 <Aside>
-  Critically, not automating still means using technology to optimize the process. Fully manual processes absolutely can and should use jigs and fixtures to improve quality and speed, and hybrid processes can use automation selectively to improve efficiency of highly stable procedures. This does not mean the whole process should be automated to remove human involvement.
+  Critically, not automating still means using technology to optimize the process. Fully manual processes absolutely can and should use jigs and fixtures to improve quality and speed, and hybrid processes can use automation selectively to improve efficiency of highly stable procedures. This does not mean the whole process should be automated to remove human involvement wherever possible - it's a mistake to assume that automation is the only way to improve efficiency.
 </Aside>
 
+.
 # The Reality of Chinese Manufacturing in 2025
 
 Everyone knows the steryotypes about products made in China: they're cheap, low quality, and made by workers in poor conditions. While these stereotypes are often true, they're increasingly not representative of the modern Chinese manufacturing landscape.
